--- a/college_bus_tracking_system.html
+++ b/college_bus_tracking_system.html
@@ -155,6 +155,9 @@
                 <th>Time</th>
                 <td>{{ time }}</td>
             </tr>
+            <p>
+            <a href="http://maps.google.com/maps?&z=15&mrt=yp&t=k&q={{ lat_str }}+{{ lng_str }}" target="_blank">View on Google Maps</a>
+        </p>
         </table>
         <h2>Specify Bus Route</h2>
         <form onsubmit="handleFormSubmit(); return false;">
