--- a/college_bus_tracking_system.html
+++ b/college_bus_tracking_system.html
@@ -133,7 +133,7 @@
     <header>
         <h1>College Bus Tracking System</h1>
         <div id="credits">
-            <p>HEMPRASATHA | KAILASATHAN | VIGNESH</p>
+            <p>HEMPRASATH | KAILASANATHAN | VIGNESH</p>
         </div>
     </header>
     <div class="container">
@@ -149,7 +149,7 @@
             </tr>
             <tr>
                 <th>Date</th>
-                <td> 21/04/2024 </td>
+                <td> 29/04/2024 </td>
             </tr>
             <tr>
                 <th>Time</th>
